--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@remix-run/node": "^2.15.3",
     "@remix-run/react": "^2.15.3",
     "isbot": "^5.1.22",
+    "jotai": "^2.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0"
